MAINTAINERCLEANFILES = Makefile.in

pixmapdir = $(DESTDIR)$(datadir)/gchemutils/@GCU_API_VER@/pixmaps
dist_pixmap_DATA = gcrystal_logo.png gchempaint_logo.png


iconsdir = $(DESTDIR)$(datadir)/icons/hicolor/scalable/apps
dist_icons_DATA = \
	gchem3d.svg \
	gchemcalc.svg \
	gchempaint.svg \
	gchemtable.svg \
	gcrystal.svg \
	gspectrum.svg
